<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.muni.fi.a2p06.stolencardatabase.fragments.BasicCarInfoStepFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <AutoCompleteTextView
                android:id="@+id/input_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_manufacturer"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_manufacturer"
            app:layout_constraintRight_toRightOf="@+id/layout_input_manufacturer"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_manufacturer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_model"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_regno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_model"
            app:layout_constraintRight_toRightOf="@+id/layout_input_model"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_model">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_regno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_regno"
                android:inputType="textCapCharacters|textVisiblePassword"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_vin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_regno"
            app:layout_constraintRight_toRightOf="@+id/layout_input_regno"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_regno">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vin"
                android:inputType="textCapCharacters|textVisiblePassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/layout_input_date"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toRightOf="@+id/layout_input_date"
            app:layout_constraintRight_toRightOf="@+id/layout_input_vin"
            app:layout_constraintTop_toTopOf="@+id/layout_input_date"
            app:layout_constraintVertical_bias="0.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_color"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_vin"
            app:layout_constraintRight_toLeftOf="@+id/layout_input_color"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_vin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_district"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_date"
            app:layout_constraintRight_toRightOf="@+id/layout_input_color"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_date">

            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/input_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_district"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#1f000000"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_district"
            app:layout_constraintRight_toRightOf="@+id/layout_input_district"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_district"/>

        <TextView
            android:id="@+id/optional_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/optional"
            android:textColor="?android:attr/textColorHint"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_production_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintLeft_toLeftOf="@+id/layout_input_district"
            app:layout_constraintRight_toLeftOf="@+id/layout_input_engine"
            app:layout_constraintTop_toBottomOf="@+id/optional_text">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_production_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_production_year"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_engine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/layout_input_production_year"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toRightOf="@+id/layout_input_production_year"
            app:layout_constraintRight_toRightOf="@+id/layout_input_vin"
            app:layout_constraintTop_toTopOf="@+id/layout_input_production_year"
            app:layout_constraintVertical_bias="0.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_engine"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
