<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/car_list_item_image"
                android:scaleType="centerCrop"
                card_view:srcCompat="@drawable/car_placeholder"/>

            <TextView
                android:id="@+id/manuf_and_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/car_image"
                android:layout_centerHorizontal="true"
                android:background="#73000000"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="12dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="22sp"
                tools:text="Manufacturer and model"/>

            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/car_image"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/stolen_date"
                android:layout_toStartOf="@+id/stolen_date"
                android:textColor="?android:attr/textColorHint"
                tools:text="District"/>

            <TextView
                android:id="@+id/stolen_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/district"
                android:layout_below="@+id/car_image"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="?android:attr/textColorHint"
                android:textSize="14sp"
                tools:text="Stolen date"/>

            <TextView
                android:id="@+id/regno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/regno_text"
                android:layout_below="@+id/district"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/regno_text"
                android:layout_toRightOf="@+id/regno_text"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                tools:text="SPZ"/>

            <TextView
                android:id="@+id/vin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/vin_text"
                android:layout_below="@+id/regno"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/regno_text"
                android:layout_toRightOf="@+id/regno_text"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                tools:text="VIN"/>

            <TextView
                android:id="@+id/regno_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/district"
                android:layout_alignStart="@+id/district"
                android:layout_below="@+id/district"
                android:layout_marginTop="8dp"
                android:text="@string/regno"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/vin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/district"
                android:layout_alignStart="@+id/district"
                android:layout_below="@+id/regno_text"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/vin"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>